# skyline-update

./: Cargo.toml  README.md
skyline-update/: Cargo.toml
skyline-update/src/: lib.rs
src/: hosted_plugins.rs  main.rs
update-protocol/: Cargo.toml
update-protocol/src/: lib.rs
update-server/plugins/test_plugin/: plugin.toml  test.txt
update-server/plugins/test_plugin_beta/: plugin.toml
update-server/src/: hosted_plugins.rs  main.rs
